// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Flex should match snapshot - renders all children horizontally 1`] = `
<div
  className="sc-jSMfEi iChCMC"
  data-testid="test-flex"
  direction="row"
>
  <li />
  <li />
  <li />
  <li />
  <li />
  <li />
  <li />
  <li />
  <li />
  <li />
</div>
`;

exports[`Flex should match snapshot - renders all children vertically 1`] = `
<div
  className="sc-jSMfEi bQrDqy"
  data-testid="test-flex"
  direction="column"
>
  <li />
  <li />
  <li />
  <li />
  <li />
  <li />
  <li />
  <li />
  <li />
  <li />
</div>
`;
